fix paws on smaller screen

--- a/study-list.scss
+++ b/study-list.scss
@@ -133,7 +133,7 @@ $avatar-max-height: 45px;
                 }
                 &:nth-child(7) {
                     width: 10%;
-                    min-width: 100px;
+                    min-width: 230px;
                 }
                 font-size: 1.2rem;
                 background: #F6F6F8;
